2004-03-22  John Luke  <jluke@cfl.rr.coc>

	* configure.in: make ENABLE_XDGMIME work right

2004-03-22 Iñigo Illán <kodeport AT terra.es>

	* Base/Gui/Pads/ProjectBrowser/BrowserNode/FileNode.cs:
	* Base/Services/File/IFileService.cs:
	* Base/Services/Project/DefaultProjectService.cs:
	* Base/Services/File/DefaultFileService.cs:
	Reject the operations made by me.

	* Base/Services/File/DefaultFileService.cs:
	Make OpenFile look if the file is a project file and make it
	display correctly on the window manager.

	* Base/Gui/Workbench/Layouts/SdiWorkspaceLayout.cs:
	Make title be displayed correctly

2004-03-21  Todd Berman <tberman@sevenl.net>

	* monodevelop.xml: updated with a lot of mime-types, and submitted
	to fd.o

2004-03-22  Iñigo Illán <kodeport AT terra.es>

	* Base/Gui/Pads/ProjectBrowser/BrowserNode/FileNode.cs:
	Make ActivateItem call OpenFileFromProject instead OpenFile

	* Base/Services/File/IFileService.cs:
	Add OpenFileProject specification

	* Base/Services/File/DefaultFileService.cs:
	LoadFileWrapper can manage files from projects.
	Implement OpenFile to manage project files and rename it to
	OpenFileProject	OpenFile now calls OpenFileProject

	* Base/Gui/IViewContent.cs:
	Add HasProject,	ProjectName and	PathRelativeToProject
	properties

	* Base/Gui/AbstractViewContent.cs:
	Implement HasProject, ProjectName, PathRelativeToProject properties

	* Base/Services/Project/DefaultProjectService.cs:
	Call OpenFileFromProject instead OpenFile when restoring
	the combine state
	
2004-03-21  John Luke  <jluke@cfl.rr.com>

	* docs/WritingAddins.html: initial addin quick guide
	* configure.in: Gtk# 0.18 is actually required
	* Makefile.am: support GNOME2.6 and fd.o way of mimetypes
	and make it conditional on if update-mime-databade is installed
	* monodevelop.xml: new mime file

2004-03-21	John BouAntoun  <jba-mono@optusnet.com.au>

	* src/AddIns/DisplayBindings/SourceEditor/Search/SearchReplaceInFilesManager.cs: